--- a/poc/poc-1.ipynb
+++ b/poc/poc-1.ipynb
@@ -411,10 +411,10 @@
         "        model='xgb',\n",
         "        quantiles=[0.10,0.30,0.50,0.70,0.90],\n",
         "        forecast_type=\"demand\",\n",
-        "        lat=52.0,\n",
-        "        lon=5.0,\n",
-        "        horizon_minutes=15,\n",
-        "        resolution_minutes=15,\n",
+        "        # lat=52.0,\n",
+        "        # lon=5.0,\n",
+        "        horizon_minutes=60, # 2 or 24\n",
+        "        resolution_minutes=60,\n",
         "        name=\"workshop_exercise_1\",\n",
         "        save_train_forecasts=True,\n",
         "       )\n",
@@ -523,14 +523,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 55,
       "id": "0c4ee289",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0c4ee289",
-        "outputId": "badfa95a-34a4-490c-ba19-1e0323f2e868"
+        "outputId": "f6e84ea5-04f2-49f4-d4a2-2ec0b147659d"
       },
       "outputs": [
         {
@@ -1263,6 +1263,35 @@
         "# webbrowser.open('./mlflow_artifacts/{}/Predictor47.0.html'.format(pj['id']))\n",
         "# webbrowser.open('./mlflow_artifacts/{}/weight_plot.html'.format(pj['id']))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "from openstef.pipeline.create_forecast import create_forecast_pipeline\n",
+        "\n",
+        "# Prepare data to make the forecast.\n",
+        "realised=input_data.loc[test_data.index, 'load'].copy(deep=True)\n",
+        "to_forecast_data=input_data.copy(deep=True)\n",
+        "to_forecast_data.loc[test_data.index, 'load']=np.nan #clear the load data for the part you want to forecast"
+      ],
+      "metadata": {
+        "id": "oCFDxRy_EjS2"
+      },
+      "id": "oCFDxRy_EjS2",
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mInQymomFRQG"
+      },
+      "id": "mInQymomFRQG",
+      "execution_count": 52,
+      "outputs": []
     }
   ],
   "metadata": {
